color bleed projector fixes

--- a/public/home/css/admin.css
+++ b/public/home/css/admin.css
@@ -22,12 +22,14 @@
 	-webkit-border-radius: 3px;
 	border: #999 thin solid;
 	font-size: 14px;
-	background-color: rgba(195,195,255, .3);
+	/* background-color: rgba(195,195,255, .3); */
+	background-color: rgb(230, 230, 255);
 	-webkit-transition: background-color .25s ease-in;
 	line-height: 1.5;
 }
 .notifInput:focus {
-	background-color: rgba(255,255,255, .5);
+	/* background-color: rgba(255,255,255, .5); */
+	background-color: rgb(245,245,255);
 }
 .removeButton{
 	float:right;
@@ -91,24 +93,8 @@ div.trackHeader {
 }
 
 .trackForm input {
-	font-weight: inherit;
-	font-style: inherit;
-	font-family: inherit;
-	display: block;
-	margin: 0px 2px 10px 10px;
-	white-space: nowrap;
-	overflow: hidden;
 	width: 30%;
-	-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,150,.15);
-	padding: 4px;
-	-webkit-border-radius: 3px;
-	border: #999 thin solid;
-	font-size: 14px;
-	background-color: rgba(195,195,255, .3);
-	-webkit-transition: background-color .25s ease-in;
-	line-height: 1.5;
 }
-
 
 span.trackText1 {
 	color: #666;
