--- a/public/home/css/home.css
+++ b/public/home/css/home.css
@@ -150,7 +150,7 @@ table:not(.ui-datepicker-calendar) th{
 }
 table:not(.ui-datepicker-calendar) tbody tr:nth-child(odd) {
 	-webkit-transition: background-color .15s ease-in;
-    background-color:#EFF2FF;
+    background-color:rgb(230,230,255);
 }
 table:not(.ui-datepicker-calendar) tbody tr:hover {
     background-color:lightblue;
